tests/errors/test_41.x
// Unknown enum key

enum Boolean -> { TRUE, FALSE }

fn main() -> i64 {
    let x: Boolean = Boolean.MAYBE;
}